<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.EditFoodActivity">

    <TextView
        android:id="@+id/textFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/tel_neve"
        android:textSize="16sp"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/editTextFoodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFoodName"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@id/textFoodName"
        android:inputType="text"
        android:backgroundTint="@color/black"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFoodName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/kal_riatartalom"
        android:textSize="16sp"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCalories"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@id/textCalories"
        android:inputType="number"
        android:backgroundTint="@color/black"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCalories"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/feh_rje"
        android:textSize="16sp"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/editTextProtein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textProtein"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@id/textProtein"
        android:inputType="number"
        android:backgroundTint="@color/black"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextProtein"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/zs_r"
        android:textSize="16sp"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/editTextFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFat"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@id/textFat"
        android:inputType="number"
        android:backgroundTint="@color/black"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/textCarbohydrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextFat"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:text="@string/sz_nhidr_t"
        android:textSize="16sp"
        android:gravity="center_vertical"/>

    <EditText
        android:id="@+id/editTextCarbohydrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCarbohydrate"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@id/textCarbohydrate"
        android:inputType="number"
        android:backgroundTint="@color/black"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/buttonAddFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCarbohydrate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/tel_hozz_ad_sa"
        android:textSize="16sp"/>

</RelativeLayout>
